# VisuMorph

./: .gitignore  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  change_hue_example.ipynb  conf.py  example.ipynb  flip_example.ipynb  index.md  make.bat  rotate_example.ipynb  scale_example.ipynb
src/visumorph/: Image.py  __init__.py  change_hue.py  flip.py  flipping.py  rotate.py  scale.py
tests/: test_Image.py  test_change_hue.py  test_flip.py  test_rotate.py  test_scale.py  test_visumorph.py
